# opendata

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  MANIFESTO_SIGNERS.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-binaries.yml  publish.yml
bencher/: Cargo.toml
common/: Cargo.toml  README.md
common/benches/: varint.rs
common/src/: lib.rs
common/src/coordinator/: error.rs  handle.rs  mod.rs  traits.rs
common/src/serde/: mod.rs  varint.rs
common/src/storage/: factory.rs  mod.rs
keyvalue/: Cargo.toml  README.md
log/: Cargo.toml  README.md
log/bench/: Cargo.toml
log/bench/src/: ingest.rs
log/rfcs/: 0001-storage.md  0002-logical-segmentation.md  0003-key-listing.md  0004-http-apis.md
log/src/: config.rs  delta.rs  error.rs  lib.rs  log.rs  main.rs  model.rs  reader.rs  segment.rs  serde.rs  storage.rs
log/src/server/: config.rs  error.rs  handlers.rs  http.rs  metrics.rs  middleware.rs  mod.rs  proto.rs  request.rs  response.rs
log/tests/: http_api_formats.rs  http_server.rs  reader_writer.rs
open-log/rfcs/: 0001-storage.md
open-tsdb/: Cargo.toml
open-tsdb/src/: delta.rs  head.rs  index.rs  main.rs  minitsdb.rs  query.rs  storage.rs
open-tsdb/src/promql/: evaluator.rs  functions.rs  mod.rs  selector.rs
open-tsdb/src/serde/: bucket_list.rs  common.rs  dictionary.rs  forward_index.rs  inverted_index.rs  key.rs  mod.rs  timeseries.rs
open-tsdb/src/storage/: merge_operator.rs  mod.rs
rfcs/: 0000-template.md
timeseries/: Cargo.toml  README.md
timeseries/bench/: Cargo.toml
timeseries/bench/src/: ingest.rs
timeseries/etc/: mock_metrics_server.py  prometheus.yaml
timeseries/rfcs/: 0001-tsdb-storage.md
timeseries/src/: delta.rs  error.rs  flusher.rs  head.rs  index.rs  lib.rs  main.rs  minitsdb.rs  model.rs  query.rs  test_utils.rs  tsdb.rs  util.rs
timeseries/src/promql/: config.rs  evaluator.rs  metrics.rs  middleware.rs  mod.rs  openmetrics.rs  remote_write.rs  request.rs  router.rs  scraper.rs  selector.rs  server.rs  tsdb_router.rs
timeseries/src/serde/: bucket_list.rs  dictionary.rs  forward_index.rs  inverted_index.rs  key.rs  mod.rs  timeseries.rs
timeseries/src/storage/: merge_operator.rs  mod.rs
vector/: Cargo.toml
vector/bench/: Cargo.toml
vector/rfcs/: 0001-storage.md
