[package]
name = "bencher"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
common.workspace = true
timeseries = { path = "../timeseries", package = "opendata-timeseries" }
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
clap.workspace = true
chrono.workspace = true
toml.workspace = true
metrics = "0.24"
metrics-util = "0.18"
humantime-serde = "1"
