[package]
name = "opendata-common"
version = "0.1.2"
edition.workspace = true
description = "Shared storage foundation for OpenData databases"
license = "MIT"
repository = "https://github.com/opendata-oss/opendata"
readme = "README.md"
keywords = ["database", "storage", "slatedb"]
categories = ["database"]

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
slatedb.workspace = true
bytes.workspace = true
futures.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
serde.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
serde_yaml.workspace = true
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "varint"
harness = false
