[package]
name = "opendata-keyvalue"
version.workspace = true
edition.workspace = true
description = "Key-value database built on SlateDB"
license = "MIT"
repository = "https://github.com/opendata-oss/opendata"
readme = "README.md"
keywords = ["database", "key-value", "slatedb"]
categories = ["database"]

[lib]
name = "keyvalue"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
common.workspace = true
tokio.workspace = true
slatedb.workspace = true
