[package]
name = "timeseries"
version.workspace = true
edition.workspace = true

[features]
default = []
remote-write = ["dep:prost", "dep:snap"]

[dependencies]
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
config.workspace = true
dashmap.workspace = true
moka.workspace = true
opendata-common.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
slatedb.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

blake3 = "1.8.2"
prometheus-client = "0.22"
promql-parser = "0.6"
roaring = "0.7"
tsz = "0.1"

# Optional dependencies for remote-write feature
prost = { workspace = true, optional = true }
snap = { workspace = true, optional = true }

[dev-dependencies]
fail.workspace = true
rstest.workspace = true
