[package]
name = "opendata-vector"
version = "0.1.0"
edition.workspace = true
description = "Vector similarity search database built on SlateDB"
license = "MIT"
repository = "https://github.com/opendata-oss/opendata"
readme = "README.md"
keywords = ["database", "vector", "similarity-search", "embeddings"]
categories = ["database"]

[lib]
name = "vector"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
common.workspace = true
bytes.workspace = true
dashmap.workspace = true
fail.workspace = true
futures.workspace = true
usearch = "2"
roaring.workspace = true
rstest.workspace = true
tokio.workspace = true

[dev-dependencies]
rand = "0.8"
